2005-02-27  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/form.c:
	* nsd/request.c:
	* nsd/urlencode: Decode + and other characters in URL paths
	correctly.  Fixes bug #1145277.

	* nsd/mimetypes.c: XML mime types changed to application/xml from
	text/xml, fixes bug #1145927.  Added a handful of new mime
	mappings.

2005-02-26  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/tclobjv.c: New file with objv argument parsing code

	* nsd/Makefile: Added compliation directive for nsd/tclobjv.c

	* include/ns.h: Added declarations... 
 	 for following structs:
	    o. Ns_ObjvSpec
	    o. Ns_ObjvTable
	  and following calls:
	    o. Ns_ParseObjv
	    o. Ns_ObjvBool
	    o. Ns_ObjvInt
	    o. Ns_ObjvLong
	    o. Ns_ObjvWideInt
	    o. Ns_ObjvDouble
	    o. Ns_ObjvString
	    o. Ns_ObjvObj
	    o. Ns_ObjvIndex
	    o. Ns_ObjvFlags
	    o. Ns_ObjvBreak
	    o. Ns_ObjvArgs
	  This all implements new argument parsing code from Stephen.
 
2005-02-26  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/unix.c:
	* include/ns.h: added Ns_GetNameForUid(), Ns_GetNameForGid()
	
	* nsd/nsmain.c: allows server to be started as uid == 0
	  if both of the following are true:
	     o. the caller process is running as root (getuid() == 0)
	     o. "-u root" or "-u 0" was given on the command line
	  Also, improved and tightented verification of passed user
	  and/or group information.

2005-02-24  Vlad Seryakov <vlad@crystalballinc.com>

	* include/ns.h nsd/nsd.h nsd/binder.c: changed server name 
	  from AOLserver to NaviServer in ns_info command.
	  New ListenXXX family functions declared in the ns.h file. 

2005-02-22  Vlad Seryakov <vlad@crystalballinc.com>

	* nsd/tclsched.c nsd/tclcmds.c doc/at.n: added ns_atstartup
	  Tcl command to be run after server started and initialized. 
	  Update documentation about those commands, kind of.

2005-02-17  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclfile.c: fixed broken NsTclChanObjCmd command which